src/Prs3d/Prs3d_PresentationShadow.hxx
@@ -34,6 +34,9 @@ public:
   //! Returns view affinity of the parent presentation
   Standard_EXPORT inline const Handle(Graphic3d_ViewAffinity)& ParentAffinity() const { return myParentAffinity; }
 
+  //! Do nothing - axis-aligned bounding box should be initialized from parent structure.
+  Standard_EXPORT virtual void CalculateBoundBox() Standard_OVERRIDE;
+
 private: 
 
   DEFINE_STANDARD_RTTIEXT(Prs3d_PresentationShadow,Prs3d_Presentation)
